--- a/Cardioid/home.html
+++ b/Cardioid/home.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
-    <title>Canvas Tutorial</title>
+    <title>Modular Multiplication Circle</title>
     <style type="text/css">
         canvas{
             border: 1px solid black;
